--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -20,15 +21,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ]
-  }
+  "lint-staged": {}
 }
