--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
-    "prisma": "^4.6.1"
+    "prisma": "^4.6.1",
+    "tailwindcss": "^3.2.4"
   },
   "lint-staged": {}
 }
