--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "12.1.6",
+    "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.11",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
