--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "components/*":["components/*"]
-    }
+      "components/*": ["components/*"]
+    },
+    "types": ["@emotion/react/types/css-prop"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
