--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "draft-js": "^0.11.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "12.1.6",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-image-gallery": "^1.2.11",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-image-gallery": "^1.2.0",
     "autoprefixer": "^10.4.13",
     "next-sitemap": "^3.1.32",
