--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   },
   "lint-staged": {}
 }
