--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^5.8.3",
     "@notionhq/client": "^2.2.2",
     "@prisma/client": "^4.6.1",
+    "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
