--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^5.8.3",
     "@notionhq/client": "^2.2.2",
     "@prisma/client": "^4.6.1",
+    "@react-oauth/google": "^0.5.0",
     "@tabler/icons": "^1.114.0",
     "@tanstack/react-query": "^4.18.0",
     "@types/node": "18.11.9",
