--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "draft-js": "^0.11.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
