--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mantine/core": "^5.8.3",
     "@mantine/hooks": "^5.8.3",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@notionhq/client": "^2.2.2",
     "@prisma/client": "^4.6.1",
     "@react-oauth/google": "^0.5.0",
@@ -27,6 +28,7 @@
     "eslint-config-next": "13.0.3",
     "jwt-decode": "^3.1.2",
     "next": "12.1.6",
+    "next-auth": "^4.18.0",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
