--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='mysql://8tcdh81lif1uqzcnsm1z:pscale_pw_CvcdHxI1ynVm0fCgIXOq6Ooh0qpb456PwXpKiF0swUR@ap-northeast.connect.psdb.cloud/commerce_database?sslaccept=strict'
+DATABASE_URL='mysql://smd131esuylkmseapvxi:pscale_pw_fYEyXug0dFMWBMGzEKIbaBlM22Cn3wusrV1DuytOip7@aws.connect.psdb.cloud/commerce_database?sslaccept=strict'
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=my-secret
