업로드 UI 및 수정

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='mysql://4v7swmvtrs2rdwhwu861:pscale_pw_6CW4ZC4GXXrHpKHJyZNE9i62BU91H9wqI8xIHDbtRSZ@aws.connect.psdb.cloud/commerce_database?sslaccept=strict'
+DATABASE_URL='mysql://4zqov18f90damvg0mz2p:pscale_pw_pLIPsX4SrtsEoPXGQOvYj4Y4CTsqsUazMRf1z0RGRQ6@aws.connect.psdb.cloud/commerce_database?sslaccept=strict'
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=my-secret
